Finished getStopWords() readDocuments() and tokenizeDocument()
Documentation will be added later